--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,46 +1,42 @@
 Package: GeoMapX
 Title: geomapx
 Version: 0.0.0.9000
-Authors@R: person('Kamil', 'Glowka', email = 'kglowka@hellmann.com', role = c('cre', 'aut'))
+Authors@R: 
+    person(given = "Kamil",
+           family = "Glowka",
+           role = c("cre", "aut"),
+           email = "kglowka@hellmann.com")
 Description: Spatial analysis on the map
 License: What license is it under?
 Imports: 
+    anytime,
+    bs4Dash,
     config,
-    golem,
-    shiny,
-    processx,
-    attempt,
-    DT,
-    glue,
-    htmltools,
-    DBI,
-    odbc,
-    pool,
-    dbplyr,
-    sf,
-    leaflet,
     dplyr,
-    purrr,
-    sfheaders,
-    mapboxer,
-    leaflet.mapboxgl,
-    rlang,
-    shinyjs,
-    thematic,
-    waiter,
-    htmlwidgets,
-    shinyWidgets,
-    mapboxapi,
-    leaflet.extras,
-    reactable,
-    crosstalk,
     echarts4r,
-    tidyr,
+    golem,
+    htmltools,
+    leaflet,
+    leaflet.extras,
+    leaflet.mapboxgl,
+    magrittr,
+    openxlsx,
+    purrr,
+    reactable,
+    rsconnect,
     scales,
-    anytime
+    sf,
+    shiny,
+    shinyjs,
+    shinyWidgets,
+    stringr,
+    waiter
+Suggests: 
+    here,
+    pkgload,
+    processx,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
